import "library/cpp/getoptpb/proto/confoption.proto";

message TOptions {
    option (NGetoptPb.Title) = "A tool for exploring compiled NLG templates";

    message TRenderCmd {
        required string Intent = 1;
        optional string Phrase = 2;
        optional string Card = 3;
        optional string Context = 4;
        optional string ReqInfo = 5;
        optional string Form = 6;
    }

    oneof SubCommand {
        TRenderCmd Render = 1 [ (NGetoptPb.Conf).SubCommand = true ];
    }
}
