syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/div";
option java_package = "ru.yandex.alice.protos.div";
option java_outer_classname = "Div2IdProto";

import "mapreduce/yt/interface/protos/extension.proto";
import "google/protobuf/struct.proto";

// special composite identifier to identifiy div views inside the system
message TDiv2Id {
    // logical card/screen/view name
    string CardName = 1 [json_name = "card_name", (NYT.column_name) = "card_name"];
    // special id to unique identify the card (when CardName is not enough), optional
    string CardId = 2 [json_name = "card_id", (NYT.column_name) = "card_id"];
}
